--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Catuserbot",
+  "name": "Ryzo",
   "description": "A telethon userbot based on snapdragon code(xtratgbot) .Easy to use and friendly bot . Maintained by Sandeep ",
-  "logo": "https://telegra.ph/file/3d60313110c58684b31ea.jpg",
+  "logo": "http://imgur.com/a/vPhouDB",
   "keywords": [
     "telegram",
     "userbot",
@@ -9,7 +9,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/sandy1709/catuserbot/",
+  "repository": "https://github.com/DhruvChhura/ProjectRyzo/",
   "website": "#TODO",
   "success_url": "#TODO",
   "env": {
