--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "Ryzo",
-  "description": "A telethon userbot based on snapdragon code(xtratgbot) .Easy to use and friendly bot . Maintained by Sandeep ",
+  "description": "A telethon userbot based on snapdragon code(xtratgbot) .Easy to use and friendly bot . Maintained by Dhruv ",
   "logo": "http://imgur.com/a/vPhouDB",
   "keywords": [
     "telegram",
